<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FifthFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="25dp"
        app:contentPadding="30dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="24dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewFive"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thanks_just_a_few_more_details_and_we_are_done"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewFive"
                android:background="@drawable/edit_text"
                android:hint="@string/company_name"
                android:padding="8dp"
                />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                app:layout_constraintTop_toBottomOf="@+id/companyName"
                android:hint="@string/job_title"
                android:padding="8dp"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/requestDemo"
                app:layout_constraintTop_toBottomOf="@+id/jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_demo"
                android:layout_marginTop="25dp"
                android:background="@drawable/my_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
