<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FirstFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="25dp"
        app:contentPadding="30dp"
        app:cardBackgroundColor="@color/background_color"
        app:cardCornerRadius="24dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_what_are_you_looking_for"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/generationBots"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lead_generation_bots"
                android:layout_marginTop="30dp"
                android:background="@drawable/my_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/multiStep"
                app:layout_constraintTop_toBottomOf="@+id/generationBots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/multi_step_forms"
                android:layout_marginTop="15dp"
                android:background="@drawable/my_button"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/integrations"
                app:layout_constraintTop_toBottomOf="@+id/multiStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/integrations"
                android:layout_marginTop="15dp"
                android:background="@drawable/my_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
